workspace/src/src/core/contract_service/contracts-L1/contracts/deploy/networkpolicy.yaml
apiVersion: machinenativeops.io/v2
kind: NetworkPolicy
metadata:
  labels:
    machinenativeops.io/app: contracts-service
    machinenativeops.io/team: contracts-team
  name: contracts-service-netpol
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - port: 443
      protocol: TCP
    to:
    - namespaceSelector: {}
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - port: 3000
      protocol: TCP
  - from:
    - podSelector: {}
    ports:
    - port: 3000
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
    ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app: contracts-service
  policyTypes:
  - Ingress
  - Egress
